email support, design changes, filtering and localization started

--- a/Lumo/appsettings.json
+++ b/Lumo/appsettings.json
@@ -9,18 +9,11 @@
     }
   },
   "AllowedHosts": "*",
-  "Theme": {
-    "Light": {
-      "MainColor": "#1E90FF",
-      "SecondaryColor": "#4682B4",
-      "BackgroundColor": "#FFFFFF",
-      "TextColor": "#000000"
-    },
-    "Dark": {
-      "MainColor": "#87CEFA",
-      "SecondaryColor": "#1C3A57",
-      "BackgroundColor": "#000000",
-      "TextColor": "#FFFFFF"
-    }
+  "EmailSettings": {
+    "Host": "sandbox.smtp.mailtrap.io",
+    "Port": "587",
+    "Username": "a666d893e23889",
+    "Password": "ecc1daba530830",
+    "From": "hello@lumo.pl"
   }
 }
