Made TagController similiar to DiaryController by using Dto in the controller itself as well

--- a/Lumo/appsettings.json
+++ b/Lumo/appsettings.json
@@ -10,10 +10,10 @@
   },
   "AllowedHosts": "*",
   "EmailSettings": {
-    "Host": "sandbox.smtp.mailtrap.io",
+    "Host": "smtp-relay.brevo.com",
     "Port": "587",
-    "Username": "a666d893e23889",
-    "Password": "ecc1daba530830",
-    "From": "hello@lumo.pl"
+    "Username": "",
+    "Password": "",
+    "From": "lumodiary@gmail.com"
   }
 }
