--- a/Lumo/appsettings.json
+++ b/Lumo/appsettings.json
@@ -10,10 +10,10 @@
   },
   "AllowedHosts": "*",
   "EmailSettings": {
-    "Host": "smtp-relay.brevo.com",
+    "Host": "sandbox.smtp.mailtrap.io",
     "Port": "587",
     "Username": "",
     "Password": "",
-    "From": "lumodiary@gmail.com"
+    "From": "hello@lumo.pl"
   }
 }
